Closed Bug 1656552 Opened 4 years ago Closed 4 years ago

Stub Health score is the incorrect number

Categories

(Core :: JavaScript Engine: JIT, defect, P2)

defect

Tracking

()

RESOLVED FIXED
81 Branch
Tracking Status
firefox81 --- fixed

People

(Reporter: caroline, Assigned: caroline)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

The stub health score is some large incorrect number. This is because the code for getting individual CacheIROp health scores is broken.

I produced this issue by running SPEW=RateMyCacheIR dist/bin/js ../jit-test/tests/cacheir/compare.js where in compare.js rateMyCacheIR is called on warmup.

Pushed by ccullen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bf19c3693cc5
Fix CacheIRHealth report spewer to account for arglength. r=iain
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: