Bug 1656552 - Fix CacheIRHealth report spewer to account for arglength. r=iain

Differential Revision: https://phabricator.services.mozilla.com/D85805